# go-dutch

./: LICENSE  README.md  setup.cfg
src/go-dutch/: Group.py  transaction.py  user.py
src/go_dutch/: group.py
tests/: test.py
