[metadata]
name = go-dutch
version = 1.0.2
author = Chengjia Yu, Sanjiv Pradhanang
author_email = cyu27182@gmail.com, pradhanang.sanjiv@gmail.com 
description = Library for simplifying shared costs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cyu5/go-dutch
project_urls =
    Bug Tracker = https://github.com/cyu5/go-dutch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src